@@ -4,7 +4,7 @@
 // Modified by Niclas Jansson 2009.
 //
 // First added:  2006-06-21
-// Last changed: 2009-08-06
+// Last changed: 2010-02-08
 
 #include <iostream>
 
@@ -22,7 +22,7 @@ BoundaryMesh::BoundaryMesh() : Mesh()
 //-----------------------------------------------------------------------------
 BoundaryMesh::BoundaryMesh(const Mesh& mesh) : Mesh()
 {
-  init(mesh);
+  init_exterior_boundary(mesh);
 }
 //-----------------------------------------------------------------------------
 BoundaryMesh::~BoundaryMesh()
@@ -30,12 +30,12 @@ BoundaryMesh::~BoundaryMesh()
   // Do nothing
 }
 //-----------------------------------------------------------------------------
-void BoundaryMesh::init(const Mesh& mesh)
+void BoundaryMesh::init_exterior_boundary(const Mesh& mesh)
 {
-  BoundaryComputation::compute_boundary(mesh, *this);
+  BoundaryComputation::compute_exterior_boundary(mesh, *this);
 }
 //-----------------------------------------------------------------------------
-void BoundaryMesh::init_interior(const Mesh& mesh)
+void BoundaryMesh::init_interior_boundary(const Mesh& mesh)
 {
   BoundaryComputation::compute_interior_boundary(mesh, *this);
 }
