@@ -4,7 +4,7 @@
 // Modified by Niclas Jansson 2009.
 //
 // First added:  2006-06-21
-// Last changed: 2009-08-06
+// Last changed: 2010-02-08
 
 #ifndef __BOUNDARY_MESH_H
 #define __BOUNDARY_MESH_H
@@ -25,17 +25,17 @@ namespace dolfin
     /// Create an empty boundary mesh
     BoundaryMesh();
 
-    /// Create boundary mesh from given mesh
+    /// Create (interior) boundary mesh from given mesh
     BoundaryMesh(const Mesh& mesh);
 
     /// Destructor
     ~BoundaryMesh();
 
-    /// Initialize boundary mesh
-    void init(const Mesh& mesh);
+    /// Initialize exterior boundary of given mesh
+    void init_exterior_boundary(const Mesh& mesh);
 
-    /// Initialize interior boundary mesh
-    void init_interior(const Mesh& mesh);
+    /// Initialize interior boundary of given mesh
+    void init_interior_boundary(const Mesh& mesh);
 
   };
 
